# seven_segment

./: CMakeLists.txt  README.md  prj.conf
boards/: apollo3_evb.overlay
modules/sevenseg/: CMakeLists.txt  west.yml
modules/sevenseg/drivers/: CMakeLists.txt  Kconfig
modules/sevenseg/drivers/sevensegment/: CMakeLists.txt  Kconfig  seven_segment.c
modules/sevenseg/dts/bindings/sevensegment/: seven-segment.yml
modules/sevenseg/include/: CMakeLists.txt
modules/sevenseg/include/sevensegment/: seven_segment.h
modules/zephyr/: module.yml
src/: main.c
